--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section id="top_banner">
+    <section class="top_banner flexible_content">
         <div class="about_me">
             <h1>
                 Welcome To
@@ -36,7 +36,7 @@
             <img src="images/Sayem-bg (1).png" alt="Loading...">
         </div>
     </section>
-    <section id="about_dream">
+    <section class="about_dream flexible_content">
         <div class="dreamImage">
             <img src="images/jhankar2.png" alt="Loading...">
         </div>
@@ -55,6 +55,33 @@
                 Resume</a>
         </div>
     </section>
+    <section class="experience">
+        <div class="expo_content">
+            <h1>Experiences</h1>
+        </div>
+        <div class="exp_wrapper">
+            <div class="exp_box">
+                <h2>Full Stack Web Developer</h2>
+                <h3 class="coloring-text">2021-Present | Pro Level Developer</h3>
+                <p>
+                    I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
+                    efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called
+                    Vue JS. I even know the deployment, server and security. I will give you 100% web solution.
+                </p>
+            </div>
+            <div class="exp_box1">
+                <h2>Baby Web Developer</h2>
+                <h3 class="coloring-text">2020-2021 | Programming Hero Learner</h3>
+                <p>
+                    They didn't offer me a job. But I made myself as a remove web developer. I made their website and
+                    showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
+            </div>
+        </div>
+    </section>
+    <footer id="copyRight">
+        © Misbahul Hossain 2021, a Programming Hero initiative.
+    </footer>
 </body>
 
 </html>
