--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                 I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma
                 how to make simple website. My goal is to build 3 websites and learn advanced topics.
             </p>
-            <a class="resume_btn" href="https://drive.google.com/drive/u/0/search?q=cv" target="_blank"> Download
+            <a class="resume_btn"
+                href="https://drive.google.com/file/d/1sHgBKosBCsDNNcgV4ciDrMhRrGpe6cXc/view?usp=sharing"
+                target="_blank"> Download
                 Resume</a>
         </div>
     </section>
